
syntax = "proto3";

package user;

option go_package = "github.com/iswangwenbin/gin-starter/internal/grpc/protobuf";

import "google/protobuf/timestamp.proto";

// 用户信息
message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  string name = 4;
  string phone = 5;
  string avatar = 6;
  int32 status = 7;
  int32 login_count = 8;
  int64 last_login_at = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
}

// 创建用户请求
message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string name = 4;
  string phone = 5;
}

// 创建用户响应
message CreateUserResponse {
  User user = 1;
}

// 获取用户请求
message GetUserRequest {
  uint64 id = 1;
}

// 获取用户响应
message GetUserResponse {
  User user = 1;
}

// 更新用户请求
message UpdateUserRequest {
  uint64 id = 1;
  string name = 2;
  string phone = 3;
  string avatar = 4;
}

// 更新用户响应
message UpdateUserResponse {
  User user = 1;
}

// 删除用户请求
message DeleteUserRequest {
  uint64 id = 1;
}

// 删除用户响应
message DeleteUserResponse {
  bool success = 1;
}

// 用户列表请求
message ListUsersRequest {
  int32 page = 1;
  int32 size = 2;
  string username = 3;
  string email = 4;
  optional int32 status = 5;
}

// 用户列表响应
message ListUsersResponse {
  repeated User users = 1;
  int64 total = 2;
  int32 page = 3;
  int32 size = 4;
}

// 用户登录请求
message LoginRequest {
  string username = 1; // 用户名或邮箱
  string password = 2;
}

// 用户登录响应
message LoginResponse {
  string token = 1;
  User user = 2;
}

// 修改密码请求
message ChangePasswordRequest {
  uint64 user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

// 修改密码响应
message ChangePasswordResponse {
  bool success = 1;
}

// 用户服务定义
service UserService {
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  
  // 获取用户
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // 用户列表
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // 修改密码
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}